--- a/src/app/components/app-shell/app-shell.component.scss
+++ b/src/app/components/app-shell/app-shell.component.scss
@@ -1,6 +1,14 @@
+:host {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-height: 0;
+}
+
 .app-shell {
   display: flex;
-  height: 100%;
+  flex: 1;
+  min-height: 0;
   overflow: hidden;
 
   &__content {
